[project]
name = "workshop-transformers"
version = "0.1.0"
description = "Hands-on workshop for building transformer applications with BERT, T5, BART, and GPT-2"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.21.0",
    "datasets>=2.10.0",
    "tokenizers>=0.13.0",
    "huggingface-hub>=0.15.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
    "tqdm>=4.64.0",
    "requests>=2.28.0",
    "packaging>=21.0",
    "hf-xet>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "pandas>=1.4.0"
]

gpu = [
    "torch>=2.0.0"  # CUDA support
]

[project.scripts]
task1 = "task1_text_classification:main"
task2 = "task2_summarization_qa:main"
task3 = "task3_text_generation:main"
